evidence_library/EC2/regions/eu-central-1/allSecurityGroups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0ce00f06670420923",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0fcc93ee5faaa8385",
            "SecurityGroupArn": "arn:aws:ec2:eu-central-1:111111111111:security-group/sg-0ce00f06670420923",
            "OwnerId": "111111111111",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "111111111111",
                            "GroupId": "sg-0ce00f06670420923"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "a1122dbd-6250-410a-b991-0625be3b1c1b",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "a1122dbd-6250-410a-b991-0625be3b1c1b",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "963",
            "date": "Fri, 06 Feb 2026 16:25:22 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
